# src/main/java/com/pragma/powerup/infrastructure/input/rest/OrderRestController.java
@@ -45,4 +45,10 @@ public class OrderRestController {
     public DefaultResponse<OrderResponseDto> assignOrder(@PathVariable Long orderId) {
         return new DefaultResponse<>(orderHandler.assignOrder(orderId));
     }
+
+    @PatchMapping(value = "/{orderId}/ready", produces = MediaType.APPLICATION_JSON_VALUE)
+    @RequireRole(RoleEnum.EMPLOYEE)
+    public DefaultResponse<OrderResponseDto> markOrderReady(@PathVariable Long orderId) {
+        return new DefaultResponse<>(orderHandler.markOrderReady(orderId));
+    }
 }
